Add line to my bio in index.html

--- a/index.html
+++ b/index.html
@@ -760,6 +760,7 @@
                     <p>My home lab consists of a Dell PowerEdge running Proxmox with numerous LXC containers and Linux VMs (some windows VM for testing).</p>
                     <p>My on-prem solution is behind my Procteli 4-port Vault running OPNSense, configured with proper network segmentation and inbound/outbound rules.</p>
                     <p>I have implemented an Azure VPN gateway to connect up to my Azure home lab but generally is not in play due to high Azure costs.</p>
+                    <p>I also have my on-premise infrastructure, including workstation level back usp to my QNAP NAS</p>
                     <p>When I'm not working with my homelab, I enjoy staying up-to-date with the latest tech trends and finding open-source projects to explore.</p>
                     
                     <div class="skills-container">
