Add webapp basic info to bio in index.html

--- a/index.html
+++ b/index.html
@@ -761,6 +761,7 @@
                     <p>My on-prem solution is behind my Procteli 4-port Vault running OPNSense, configured with proper network segmentation and inbound/outbound rules.</p>
                     <p>I have implemented an Azure VPN gateway to connect up to my Azure home lab but generally is not in play due to high Azure costs.</p>
                     <p>I also have my on-premise infrastructure, including workstation level backed up to my QNAP NAS. For my cloud solutions, I utilize Azure backup.</p>
+                    <p>This current website runs as a webapp, running Linux with Node.js runstack.</p>
                     <p>When I'm not working with my homelab, I enjoy staying up-to-date with the latest tech trends and findin  g open-source projects to explore.</p>
                     <p>I am currently working on my pathway to the Azure Solutions Architect Expert certification as I believe this is where most MSPs have opportunity growth in.</p>
                     <p>See below to reach out if you have any questions or want to connect!</p>
