changes to bio and projects

--- a/index.html
+++ b/index.html
@@ -732,6 +732,7 @@
                         <li>Set up Microsoft Entra ID</li>
                         <li>Configured RBAC permissions</li>
                         <li>Implemented MFA</li>
+                        <li>Conditional access policies</li>
                         <li>Used Key Vault for secrets</li>
                     </ul>
                 </div>
