Update about me page

--- a/index.html
+++ b/index.html
@@ -755,17 +755,24 @@
                 </div>
                 <div class="about-content">
                     <h3>Hi, I'm Klaus!</h3>
-                    <p>I'm an IT professional working at an MSP, where I love helping businesses leverage technologies to solve real-world challenges. My focus lies in improving ineffecient processes via cloud or automation. I also have a heavy passion in properly configuring and deploying cloud software/systems.</p>
-                    <p>My main skills include the full Microsoft Stack, PowerShell/Scripting, Cloud software/systems, Azure, Windows/Linux servers, RMM solutions and more.</p>
-                    <p>This portfolio showcases some of the hybrid projects I've been working on as I explore different services and capabilities. I'm passionate about creating efficient, scalable, and secure solutions.</p>
-                    <p>My home lab consists of a Dell PowerEdge running Proxmox with numerous LXC containers and Linux VMs (some windows VM for testing).</p>
-                    <p>My on-prem solution is behind my Procteli 4-port Vault running OPNSense, configured with proper network segmentation and inbound/outbound rules.</p>
-                    <p>I have implemented an Azure VPN gateway to connect up to my Azure home lab but generally is not in play due to high Azure costs.</p>
-                    <p>I also have my on-premise infrastructure, including workstation level backed up to my QNAP NAS. For my cloud solutions, I utilize Azure backup.</p>
-                    <p>This current website runs as a webapp, running Linux with Node.js runstack.</p>
-                    <p>When I'm not working with my homelab, I enjoy staying up-to-date with the latest tech trends and findin  g open-source projects to explore.</p>
-                    <p>I am currently working on my pathway to the Azure Solutions Architect Expert certification as I believe this is where most MSPs have opportunity growth in.</p>
-                    <p>See below to reach out if you have any questions or want to connect!</p>
+
+                    <p>I'm an IT professional working at an MSP where I help businesses leverage technologies to solve real-world challenges. My focus lies in improving inefficient processes through cloud solutions and automation, with a passion for properly configuring and deploying secure systems.</p>
+
+                    <p>My expertise spans the full Microsoft Stack including Intune, PowerShell scripting, cloud systems, Windows/Linux servers, RMM solutions and much more.</p>
+
+                    <p>This portfolio showcases hybrid projects I've developed while exploring different services. I'm passionate about creating efficient, scalable, and secure solutions for various business needs.</p>
+
+                    <h4>My Home Lab Setup</h4>
+
+                    <p>My tech environment includes a Dell PowerEdge running Proxmox with numerous LXC containers and Linux VMs (plus some Windows VMs for testing). Everything runs behind a Protectli 4-port Vault with OPNSense, configured with proper network segmentation and security rules.</p>
+
+                    <p>I've implemented an Azure VPN gateway for connecting to my Azure lab environment, though it's not always active due to cost considerations. My on-premise infrastructure is backed up to a QNAP NAS, while cloud solutions utilize Azure Backup.</p>
+
+                    <p>This website runs as a Linux webapp with Node.js as the runtime stack.</p>
+
+                    <p>When I'm not working with my homelab, I enjoy staying current with the latest tech trends and exploring interesting open-source projects. I'm currently pursuing the Azure Solutions Architect Expert certification, believing this is where MSPs have significant growth opportunity.</p>
+
+                    <p>Questions or want to connect? Reach out below!</p>
                     
                     <div class="skills-container">
                         <h4>My Skills & Interests</h4>
