Remove redudant txt in about me section

--- a/index.html
+++ b/index.html
@@ -780,9 +780,9 @@
                             <span class="skill-badge">Azure Cloud</span>
                             <span class="skill-badge">Infrastructure</span>
                             <span class="skill-badge">Web Development</span>
-                            <span class="skill-badge">Microsoft Stack with a heavy focus on Intune and Entra</span>
+                            <span class="skill-badge">Microsoft Stack [heavy focus in Intune and Entra]</span>
                             <span class="skill-badge">Cloud Security</span>
-                            <span class="skill-badge">Cloud & Open Source Software</span>
+                            <span class="skill-badge">Cloud/Open Source Software</span>
                             <span class="skill-badge">Automation</span>
                             <span class="skill-badge">System Administration</span>
                             <span class="skill-badge">PowerShell</span>
