add placeholder for key

--- a/smtp-tester.html
+++ b/smtp-tester.html
@@ -477,7 +477,7 @@
                 
                 try {
                     // Call your Azure Function
-                    const response = await fetch('https://smtp-auth-tester-kb.azurewebsites.net/api/SmtpAuthTester?code=69PInM94fx-IWIhwkj4UQUPi1JiEwEOVJA5bdA1fqepvAzFubPCDAw==', {
+                    const response = await fetch('https://smtp-auth-tester-kb.azurewebsites.net/api/SmtpAuthTester?code=FUNCTION_KEY_HERE', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
