--- a/index.html
+++ b/index.html
@@ -603,7 +603,6 @@
                             <span class="tech-badge">Azure AD</span>
                             <span class="tech-badge">Azure Functions</span>
                         </div>
-                        <a href="smtp-tester.html" class="project-link">View SMTP Auth Tester <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 
@@ -620,7 +619,7 @@
                             <span class="tech-badge">Blob Storage</span>
                             <span class="tech-badge">PowerShell</span>                           
                         </div>
-                        <!--<<a href="#" class="project-link">View Progress <i class="fas fa-arrow-right"></i></a>-->
+                        <a href="smtp-tester.html" class="project-link">View SMTP Auth Tester Demo <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 
