Fix grammer and wording on smtp and index html

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                     </div>
                     <div class="project-body">
                         <h3>Static Website with Azure Storage</h3>
-                        <p>Created a simple portfolio website (like this one) using Azure Storage static website hosting with custom domain and CDN integration via Github.</p>
+                        <p>Created a portfolio website (like this one) using Azure Storage static website hosting with custom domain and CDN integration via Github.</p>
                         <div class="project-tech">
                             <span class="tech-badge">Azure Storage</span>
                             <span class="tech-badge">Azure CDN</span>
@@ -584,7 +584,7 @@
                         <div class="project-tech">
                             <span class="tech-badge">App Service</span>
                             <span class="tech-badge">Azure SQL</span>
-                            <span class="tech-badge">ASP.NET Core</span>
+                            <span class="tech-badge">Node.js</span>
                         </div>
                         <!--<a href="#" class="project-link">View Code <i class="fas fa-arrow-right"></i></a>-->
                     </div>
@@ -688,8 +688,8 @@
                     <ul class="service-features">
                         <li>Set up blob containers</li>
                         <li>Configured static website hosting</li>
-                        <li>Used file shares for applications</li>
-                        <li>Created shared access signatures</li>
+                        <li>Used file shares</li>
+                        <li>Implemented as repo for custom scripts shared access signatures</li>
                     </ul>
                 </div>
                 
