fix typo in smtp tester html

--- a/smtp-tester.html
+++ b/smtp-tester.html
@@ -395,7 +395,7 @@
             
             <div class="privacy-notice">
                 <h3><i class="fas fa-shield-alt"></i> Privacy & Security Notice</h3>
-                <p>This tool only uses the inputted credentials and configuration to test SMTP authentication at the moment of submission. No credentials are stored on the Azure servers, in my databases, or in my logs. All processing happens in memory and is immediately discarded after the test completes.</p>
+                <p>My tool only uses the inputted credentials and configuration to test SMTP authentication at the moment of submission. No credentials are stored on the Azure servers, in my databases, or in my logs. All processing happens in memory and is immediately discarded after the test completes.</p>
                 <p>For security best practices, consider using app-specific passwords or temporary credentials when testing.</p>
             </div>
             
